# deepagent

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
app/: __init__.py  agents.py  classifier.py  config.py  fallbacks.py  langsmith_utils.py  logging_utils.py  main.py  manager.py  memory.py  prompts.py  schemas.py  scoring.py  storage.py  text_utils.py  tools.py  uploads.py  visual.py
app/static/: app.js  styles.css
app/templates/: index.html
docs/: TESTING.md
scripts/: download_local_vision_model.py  smoke_test_local_vision.py
skills/base/link-first-research/: SKILL.md
skills/project/image-evidence-intake/: SKILL.md
skills/project/image-evidence-intake/agents/: openai.yaml
skills/project/memory-regret-check/: SKILL.md
skills/project/memory-regret-check/agents/: openai.yaml
tests/: test_agents.py  test_api.py  test_classifier.py  test_langsmith_utils.py  test_scoring.py  test_storage.py  test_tools.py  test_visual.py
